--- a/HTML_Resume.html
+++ b/HTML_Resume.html
@@ -12,7 +12,7 @@
     <div class="Menu">
         <h1>Triton L. Ferguson</h1>
         <div class="MenuLinks">
-            <a link href="HTML_Home.html">HOME</a>&emsp;&emsp;
+            <a link href="index.html">HOME</a>&emsp;&emsp;
             <a link href="HTML_Resume.html">MY RESUME</a>
         </div>
     </div>
