--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="Menu">
+    <div class="header">
         <h1>Triton L. Ferguson</h1>
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
@@ -32,6 +32,10 @@
                 <li>Java
             </ul>
         </div>
+    </div>
+    
+    <div class="footer">
+        Created by Triton Ferguson
     </div>
 </body>
 
