--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
             </ul>
         </div>
     </div>
-    
-    <div class="footer">
-        Created by Triton Ferguson
-    </div>
 </body>
-
+    
+<footer>
+    Created by Triton Ferguson
+</footer>
 </html>
