--- a/HTML_Resume.html
+++ b/HTML_Resume.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="Menu">
+    <div class="header">
         <h1>Triton L. Ferguson</h1>
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
@@ -63,5 +63,7 @@
     </ul>
     </div>
 </body>
-
+<footer>
+    Created by Triton Ferguson
+</footer>
 </html>
