Update and rename HTML_Resume.html to resume.html

--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
         <h1>Triton L. Ferguson</h1>
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
-            <a link href="HTML_Resume.html">MY RESUME</a>
+            <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
     <div class="FocusText">
