--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Triton L. Ferguson</title>
-    <link rel="stylesheet" type="text/css" href="MyStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
