--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,8 @@
             <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
+    
+    <img src ="Resources/resume.png"/>
     <div class="FocusText">
     <div style="margin-left : 15em">Triton L. Ferguson<br /></div>
     <div style="margin-left : 13.75em">1070 Mckinley ave apt #5</div>
