--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     
-    <img src ="Resources/resume.png" alt="My Resume As A .PNG" />
+    <img src ="Resources/resume.PNG" alt="My Resume As A .PNG" />
     <div class="FocusText">
     <div style="margin-left : 15em">Triton L. Ferguson<br /></div>
     <div style="margin-left : 13.75em">1070 Mckinley ave apt #5</div>
