--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
             <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
-    <img src ="Resources/resume.PNG" alt="My Resume As A .PNG" />
+    <img src ="Resources/resume.png" alt="My Resume As A .PNG" />
 </body>
     
 <footer>
