--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
             <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
-    <img src ="Resources/resume.png" alt="My Resume As A .PNG" width: 300px height: 800px/>
+    <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="300" height="700" />
     <footer>
         Created by Triton Ferguson
     </footer>
