--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
             <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
-    <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" margin=auto" />
+    <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" margin="auto" />
     <footer>
         Created by Triton Ferguson
     </footer>
