--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,7 @@
             <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
-    <div style="margin:0;padding:0">
-        <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" />
-    </div>
+        <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" align="middle"/>
     <footer>
         Created by Triton Ferguson
     </footer>
