--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
- ﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
@@ -16,7 +16,7 @@
             <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
-        <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" align="middle" />
+        <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" />
     <footer>
         Created by Triton Ferguson
     </footer>
