--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Triton L. Ferguson</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
