--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
             <a link href="resume.html">MY RESUME</a>
+            <a link href = "work.html">WORK</a>
         </div>
     </div>
     <div class="BlogTitle">
