--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Triton L. Ferguson</h1>
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
-            <a link href="resume.html">MY RESUME</a>
+            <a link href="resume.html">MY RESUME</a>&emsp;&emsp;
             <a link href = "work.html">WORK</a>
         </div>
     </div>
