added links and header

--- a/work.html
+++ b/work.html
@@ -3,6 +3,14 @@
   <head>
     <title> Triton L. Ferguson </title>
   </head>
+    <div class = "header">
+      <h1>Triton L. Ferguson<h1>
+        <div class = "MenuLinks">
+          <a link href = "index.html">HOME</a>&emsp;&emsp;
+          <a link href = "work.html">WORK</a>&emsp;&emsp;
+          <a link href = "resume.html">MY RESUME</a>
+         </div>
+        </div>
   
   <body>
   
