--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@
         <h1>Triton L. Ferguson</h1>
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
-            <a link href="resume.html">MY RESUME</a>&emsp;&emsp;
-            <a link href="work.html">WORK</a>
+            <a link href="work.html">WORK</a>&emsp;&emsp;
+            <a link href="resume.html">MY RESUME</a>
         </div>
     </div>
         <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" />
