added reference to stylesheet.css

--- a/work.html
+++ b/work.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset = "utf-8" />
     <title> Triton L. Ferguson </title>
+    <link rel = "stylesheet" type = "text/css" href = "stylesheet.css">
   </head>
     <div class = "header">
       <h1>Triton L. Ferguson<h1>
