--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
             <a link href="work.html">WORK</a>&emsp;&emsp;
-            <a link href="resume.html">MY RESUME</a>
+            <a link href="resume.html">RESUME</a>
         </div>
     </div>
         <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" />
