--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
         <div class = "MenuLinks">
           <a link href = "index.html">HOME</a>&emsp;&emsp;
           <a link href = "work.html">WORK</a>&emsp;&emsp;
-          <a link href = "resume.html">MY RESUME</a>
+          <a link href = "resume.html">RESUME</a>
          </div>
         </div>
         
