--- a/work.html
+++ b/work.html
@@ -13,8 +13,9 @@
           <a link href = "resume.html">RESUME</a>
          </div>
         </div>
-        
-        <iframe src="http://www.youtube.com/embed/W7qWa52k-nE" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+        <div class = "Videos">
+          <iframe src="http://www.youtube.com/embed/W7qWa52k-nE" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+        </div>
   
   <body>
   
