--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
          </div>
         </div>
         <div class = "Videos">
-          <iframe src="http://www.youtube.com/embed/W7qWa52k-nE" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          <object data="http://www.youtube.com/embed/W7qWa52k-nE" frameborder="0" allowfullscreen></object>
         </div>
   
   <body>
