--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
          </div>
         </div>
         <div class = "Videos">
-          <object data="https://www.youtube.com/watch?v=oS44utZ1uqg" frameborder="0" allowfullscreen></object>
+          <object data="https://www.youtube.com/watch?v=oS44utZ1uqg"</object>
         </div>
   
   <body>
