--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <title> Triton L. Ferguson </title>
     <link rel = "stylesheet" type = "text/css" href = "stylesheet.css">
   </head>
+  <body>
     <div class = "header">
       <h1>Triton L. Ferguson<h1>
         <div class = "MenuLinks">
@@ -16,8 +17,8 @@
         <div class = "Videos">
           <object data="https://www.youtube.com/watch?v=oS44utZ1uqg"</object>
         </div>
-  
-  <body>
-  
+   <footer>
+        Created by Triton Ferguson
+    </footer>
   </body>
 </html>
