--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@
          </div>
         </div>
         <div class = "Videos">
-          <object data="https://www.youtube.com/watch?v=oS44utZ1uqg"> </object>
+          <object data="https://www.youtube.com/watch?v=oS44utZ1uqg" width = "560" height = "315"> </object>
         </div>
     <footer>
         Created by Triton Ferguson
