--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class = "header">
-      <h1>Triton L. Ferguson<h1>
+      <h1>Triton L. Ferguson</h1>
       <div class = "MenuLinks">
         <a link href = "index.html">HOME</a>&emsp;&emsp;
         <a link href = "work.html">WORK</a>&emsp;&emsp;
