--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
+    <img src = "Resources/cody_symbol.png" />
     <div class="BlogTitle">
         <h2>About Me:</h2>
         <div class="BlogArea">
