--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
-    <img src = "Resources/code_symbol.png" />
+    <div class = "centeredImage">
+        <img src = "Resources/code_symbol.png" />
+    </div>
     <div class="BlogTitle">
         <h2>About Me:</h2>
         <div class="BlogArea">
