--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
-    <div class = "centeredImage">
-        <img src = "Resources/code_symbol.png" />
+    <div class = "ProfileImage">
+        <img src = "Resources/photo.png" />
     </div>
     <div class="BlogTitle">
         <h2>About Me:</h2>
