--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class = "ProfileImage">
-        <img src = "Resources/photo.jpg" />
+        <img src = "Resources/photo.jpg" style = "width:500px; height:500px;" />
     </div>
     <div class="BlogTitle">
         <h2>About Me:</h2>
