--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
-    <div class = "ProfileImage">
-        <img src = "Resources/photo.jpg" style = "width:500px; height:500px; border-radius:50%;" />
-    </div>
+        <img src = "Resources/photo.jpg" style = "width:500px; height:500px; border-radius:50%; margin-right:auto; margin-left:auto;" />
     <div class="BlogTitle">
         <h2>About Me:</h2>
         <div class="BlogArea">
