--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
-        <img src = "Resources/photo.jpg" style = "width:500px; height:500px; border-radius:50%;" margin = "right: auto; left: auto;">
+        <div class = "ProfileImage">
+            <img src = "Resources/photo.jpg" style = "width:500px; height:500px; border-radius:50%;" />
+        </div>
     <div class="BlogTitle">
         <h2>About Me:</h2>
         <div class="BlogArea">
