--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
-    <img class = "ProfileImage" src = "Resources/photo.jpg" style = "width:500px; height:500px; border-radius:50%;" />
+    <img class = "ProfileImage" src = "Resources/photo.jpg"/>
     <div class="BlogTitle">
         <h2>About Me:</h2>
         <div class="BlogArea">
