--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
         <a link href = "resume.html">RESUME</a>
       </div>
      </div>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg"> </iframe>
+        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
     <footer>
         Created by Triton Ferguson
     </footer>
