--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
             <a link href="resume.html">RESUME</a>
         </div>
     </div>
-        <img src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" />
+        <img class = "ResumeImage" src ="Resources/resume.png" alt="My Resume As A .PNG" width="450" height="600" />
     <footer>
         Created by Triton Ferguson
     </footer>
