--- a/work.html
+++ b/work.html
@@ -14,26 +14,8 @@
         <a link href = "resume.html">RESUME</a>
       </div>
      </div>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-    <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-    <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-    <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
-        <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>
+        <h2>Spring 2018</h2>
+          <iframe class = "Videos" src="https://www.youtube.com/embed/oS44utZ1uqg" frameborder="0" allowfullscreen> </iframe>   
     <footer>
       </br>
         Created by Triton Ferguson
