Added meta keywords to Index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Triton L. Ferguson</title>
+    <meta name="keywords" content="Triton Ferguson, TritonFerguson">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
