--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         </br>
         Created by Triton Ferguson
     </footer>
+    
+<script src="scripts/main.js"></script>
+
 </body>
     
 </html>
