--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         Created by Triton Ferguson
     </footer>
     
-<script src="scripts/main.js"></script>
+<script src="Scripts/main.js"></script>
 
 </body>
     
