--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
@@ -40,8 +40,6 @@
         </br>
         Created by Triton Ferguson
     </footer>
-    
-<script src="Scripts/main.js"></script>
 
 </body>
     
