--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="MenuLinks">
             <a link href="index.html">HOME</a>&emsp;&emsp;
             <a link href="work.html">WORK</a>&emsp;&emsp;
+            <a link href="javatest.html">JavaScript Test</a>&emsp;&emsp;
             <a link href = "resume.html">RESUME</a>
         </div>
     </div>
