--- a/javatest.html
+++ b/javatest.html
@@ -7,4 +7,10 @@
   <script src="Scripts/main.js"></script>
   <p id="demo">Change THis Text.</p>
   <button>Home</button>
+  
+  <p id="demo2">JavaScript can change HTML content.</p>
+
+<button type="button" onclick='document.getElementById("demo2").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+  
+  
 </body>
