--- a/javatest.html
+++ b/javatest.html
@@ -5,10 +5,11 @@
 </head>
 <body>
   
-  <p id="demo">Change THis Text.</p>
-  <script src="Scripts/main.js"></script>
   
+  <script src="Scripts/main.js">
+  <p id="demo">Change THis Text.</p>
   <button>Home</button>
+    </script>
   
   <p id="demo2">JavaScript can change HTML content.</p>
 
