--- a/javatest.html
+++ b/javatest.html
@@ -6,10 +6,9 @@
 <body>
   
   
-  <script src="Scripts/main.js">
+  <script src="Scripts/main.js"></script>
   <p id="demo">Change THis Text.</p>
   <button>Home</button>
-    </script>
   
   <p id="demo2">JavaScript can change HTML content.</p>
 
