--- a/javatest.html
+++ b/javatest.html
@@ -8,6 +8,6 @@
   
   <script src="Scripts/main.js"></script>
   <p id="demo">Change THis Text.</p>
-  <button>Home</button>
+  <button onclick = "ChangeText()">Home</button>
   
 </body>
