Update and rename javatest.html to javascript.html

--- a/javascript.html
+++ b/javascript.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
 <head>
+  
   <title>javascript test</title>
+  
 </head>
 <body>
   
-  
   <script src="Scripts/main.js"></script>
-  <p id="demo">Change THis Text.</p>
+  <p id="text">Change This Text.</p>
   <button onclick = "ChangeText()">Home</button>
-  
+ 
 </body>
