--- a/javascript.html
+++ b/javascript.html
@@ -9,6 +9,6 @@
   
   <script src="Scripts/main.js"></script>
   <p id="text">Change This Text.</p>
-  <button onclick = "ChangeText()">Home</button>
+  <button onclick = "ChangeText()">Change Text</button>
  
 </body>
