--- a/javascript.html
+++ b/javascript.html
@@ -3,12 +3,14 @@
 <head>
   
   <title>javascript test</title>
-  
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   
   <script src="Scripts/main.js"></script>
   <p id="text">Change This Text.</p>
   <button onclick = "ChangeText()">Change Text</button>
+  
+  <img class = "GameWindow" src = "Resources/space.jpg" />
  
 </body>
