--- a/javascript.html
+++ b/javascript.html
@@ -8,10 +8,12 @@
 <body>
   
   <script src="Scripts/main.js"></script>
-  <p id="text">Change This Text.</p>
-  <button onclick = "ChangeText()">Change Text</button>
-  </br>
+    <p id="text">Change This Text.</p>
+    <button onclick = "ChangeText()">Change Text</button>
+    </br>
   
-  <img class = "GameWindow" src = "Resources/space.jpg" />
+  <script src = "Scripts/astroids.js"></script>
+    <img class = "GameWindow" src = "Resources/space.jpg" />
+    <input type="text" onkeypress="keyCode(event)"> 
  
 </body>
