--- a/javascript.html
+++ b/javascript.html
@@ -13,7 +13,7 @@
     </br>
   
   <script src = "Scripts/astroids.js"></script>
-    <img class = "GameWindow" src = "Resources/space.jpg" />
+    <img id = "space" class = "GameWindow" src = "Resources/space.jpg" />
     <input type="text" size="50" onkeypress="keyCode(event)"> 
  
 </body>
