--- a/javascript.html
+++ b/javascript.html
@@ -14,6 +14,6 @@
   
   <script src = "Scripts/astroids.js"></script>
     <img id = "space" class = "GameWindow" src = "Resources/space.jpg" />
-    <input type="text" size="50" onkeypress="keyCode(event)"> 
+    <input type="text" size="50" onkeydown="keyCode(event)"> 
  
 </body>
