--- a/javascript.html
+++ b/javascript.html
@@ -15,6 +15,6 @@
   <script src = "Scripts/astroids.js"></script>
     <img id = "space" src = "Resources/space.jpg" />
     <input type="text" size="50" onkeydown="keyCode(event)"> 
-    <button onclick = "ChangePic()">Scroll</button>
+    <button onclick = "changepic()">Scroll</button>
  
 </body>
